refactor: List 응답을 ReservationAllResponse 객체로 감싸서 반환하도록 변경